grpc_timeouts/argocd/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: meshgrpc
  labels:
    istio.io/rev: default
